--- a/project.blocks/image-loader/image-loader.scss
+++ b/project.blocks/image-loader/image-loader.scss
@@ -3,13 +3,6 @@
 }
 
 .image-loader__box-image {
-  width: 80px;
-  min-width: 80px;
-  height: 80px;
-  background-color: #F3F4F6;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   overflow: hidden;
   border-radius: 6px;
   margin-right: 8px;
@@ -17,27 +10,27 @@
     display: flex;
   }
 }
-.image-loader__images {
-  display: flex;
-  max-width: 352px;
-  &_filled {
-    overflow-x: scroll;
-  }
-}
-.image-loader__image {
-  width: 80px;
-}
-.image-loader__button {
+
+.image-loader__elem {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #F3F4F6;
+  width: 80px;
+  min-width: 80px;
+  height: 80px;
+  margin-bottom: 8px;
+  margin-right: 8px;
+  background-color: #F3F4F6;
+}
+
+.image-loader__box {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 440px;
+}
+.image-loader__button {
   border: 1px solid #EAECF0;
   box-sizing: border-box;
-  width: 80px;
-  height: 80px;
-  border-radius: 6px;
-  margin-right: 8px;
   cursor: pointer;
 }
 .image-loader__input {
@@ -75,5 +68,7 @@
 .image-loader__delete-button {
   line-height: 32px;
   margin-left: 4px;
-  color: rgba(255, 255, 255, 0.8);
+  color: #FFF;
+  opacity: 0.8;
 }
+
